@@ -1,3 +1,8 @@
+Mon Jul 23 20:08:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/cad/CADShapeBuilder.java: Add types to
+	newCurve2D() and newCurve3D() arguments.
+
 Fri Jul 20 16:01:31 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/mesher/ds/MMesh1D.java: New boundaryNodes() method.
